--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,35 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>PiSurveillancer Client</title>
         <style>
+            body{
+                width: 100%;
+                height: 100%;
+                background-color: cornflowerblue;
+                text-align: center;
+                overflow: hidden;
+                position: absolute;
+                display:flex;
+                flex-direction: column;
+            }
+            #camera-cont{
+                padding: 10vh;
+                vertical-align: top; 
+            }
+            #camera{
+                width: 640px;
+                height: 480px;
+                border: 1vh solid black;
+            }
             button{
                 border: none;
                 color: white;
-                font-size: 20px;
+                font-size: 3vh;
+                margin: 2vh;
+                padding: 1vh;
+            }
+            button:hover{
+                filter: brightness(0.85);
+                cursor: pointer;
             }
             #start-btn{
                 background-color: green;
@@ -17,13 +42,21 @@
             #stop-btn{
                 background-color: red;
             }
+            @media only screen and (max-width: 600px) {
+                #camera{
+                    width: 100%;
+                    height: auto;
+                }
+            }
         </style>
     </head>
     <body>
-		<img src="https://img.icons8.com/ios-glyphs/90/000000/camera.png" alt="camera" id="camera">
-        <br>
-        <button type="button" id="start-btn" onclick="commander('start')">Start</button>
-        <button type="button" id="stop-btn" onclick="commander('stop')">Stop</button>
+        <div id="camera-cont">
+            <img src="https://svgsilh.com/svg/1296797.svg" id="camera">
+            <br>
+            <button type="button" id="start-btn" onclick="commander('start')">Start</button>
+            <button type="button" id="stop-btn" onclick="commander('stop')">Stop</button>
+        </div>
         <script src="/socket.io/socket.io.js"></script>
         <script>
             var socket = io()
@@ -35,19 +68,20 @@
             });
 
             function commander(command) {
-                // send start camera command
+                // send camera command
                 socket.emit(command, "")
+                if (command === "start") {
+                    document.getElementById("camera").style.borderColor = "red"
+                } else if (command === "stop") {
+                    document.getElementById("camera").style.borderColor = "black"
+                    document.getElementById("camera").src = "https://svgsilh.com/svg/1296797.svg"
+                }
             }
 
             // update frames
             let data = ""
             socket.on('frame', (data) =>{
                 document.getElementById("camera").src=data;
-            })
-
-            // connection handling
-            socket.on('error', () => {
-                console.log("Server connection failed")
             })
         </script>
     </body>
