--- a/frontend/index.ejs
+++ b/frontend/index.ejs
@@ -52,37 +52,63 @@
     </head>
     <body>
         <div id="camera-cont">
-            <img src="https://svgsilh.com/svg/1296797.svg" id="camera">
+            <img src="https://svgsilh.com/svg/1296797.svg" id="camera" onerror="this.src='./alternative.png'">
             <br>
             <button type="button" id="start-btn" onclick="commander('start')">Start</button>
             <button type="button" id="stop-btn" onclick="commander('stop')">Stop</button>
         </div>
         <script src="/socket.io/socket.io.js"></script>
         <script>
-            var socket = io()
+            const socket = io()
+            let isActive = false
             
             // server connection handling
             socket.on("connect_error", (err) => {
                 console.clear()
-                console.log(`server connection error: ${err.message}`);
-            });
+                console.log(`server connection error: ${err.message}`)
+            })
 
             function commander(command) {
                 // send camera command
-                socket.emit(command, "")
                 if (command === "start") {
-                    document.getElementById("camera").style.borderColor = "red"
+                    // check is camera was activated before
+                    if (!isActive) {
+                        console.log("start camera")
+                        isActive = true
+                        document.getElementById("camera").style.borderColor = "red"
+                        socket.emit("start", "")
+                    }
                 } else if (command === "stop") {
-                    document.getElementById("camera").style.borderColor = "black"
-                    document.getElementById("camera").src = "https://svgsilh.com/svg/1296797.svg"
+                    if (isActive) {
+                        // setTimeout(function () {
+                            console.log("stop camera")
+                            isActive = false
+                            document.getElementById("camera").style.borderColor = "black"
+                            document.getElementById("camera").src = "https://svgsilh.com/svg/1296797.svg"
+                            socket.emit("stop", "")
+                        // }, 5000)
+                    }
                 }
             }
 
             // update frames
             let data = ""
             socket.on('frame', (data) =>{
-                document.getElementById("camera").src=data;
+                // check brocken image
+                if (isBase64(data.substring(22))) {
+                    document.getElementById("camera").src = data
+                }
             })
+
+            function isBase64(str) {
+                if (str ==='' || str.trim() ===''){ return false; }
+                try {
+                    btoa(atob(str)) == str
+                    return true
+                } catch (err) {
+                    return false
+                }
+            }
         </script>
     </body>
 </html>
